# food_on_the_fly

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  REPORT.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.dvc/tmp/: lock
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml  require-dev-source.yml
api/: README.md
configs/: config.yaml
data/: README.md
data/processed/: drift.csv.dvc  test.csv.dvc  train.csv.dvc  val.csv.dvc
dockerfiles/: Dockerfile  README.md
docs/: PHASE1.md  api.md  data.md  getting_started.md  index.md  mkdocs.yml
notebooks/: README.md  data_visual_noteb.ipynb
reports/: feature_importances.csv
scripts/: test_data_load.py
src/food_on_the_fly/: __init__.py  baseline_model.py  config.py  predict_model.py  train_model.py
src/food_on_the_fly/analysis/: feature_importance.py
src/food_on_the_fly/data/: __init__.py  loaders.py  make_dataset.py
src/food_on_the_fly/evaluation/: __init__.py
src/food_on_the_fly/features/: __init__.py  build_features.py
src/food_on_the_fly/models/: __init__.py  model.py
src/food_on_the_fly/utils/: __init__.py  seed.py
src/food_on_the_fly/visualization/: __init__.py  visualize.py
tests/: test_model.py
